Fixed: Weird scrollbar sometimes appearing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .navbar-collapse.in {
-    overflow-y: auto;
+    overflow-y: visible;
 }
 
 .mensae th, .mensae td {
